# models/decoder/cacao.go
@@ -1,0 +1,72 @@
+package decoder
+
+import (
+	"encoding/json"
+	"reflect"
+	"soarca/logger"
+	"soarca/models/cacao"
+	"soarca/models/validator"
+)
+
+type Empty struct{}
+
+var component = reflect.TypeOf(Empty{}).PkgPath()
+var log *logger.Log
+
+func init() {
+	log = logger.Logger(component, logger.Trace, "", logger.Json)
+}
+
+func DecodeValidate(data []byte) *cacao.Playbook {
+
+	if err := validator.IsValidCacaoJson(data); err != nil {
+		log.Error(err)
+		log.Trace("json validation failed")
+		return nil
+	}
+
+	playbook := decode(data)
+
+	if playbook == nil {
+		log.Error("playbook decoding failed")
+		return nil
+	}
+
+	if err := validator.IsSafeCacaoWorkflow(playbook); err != nil {
+		log.Error(err)
+		return nil
+	}
+
+	return playbook
+}
+
+func decode(data []byte) *cacao.Playbook {
+	var playbook cacao.Playbook
+
+	if err := json.Unmarshal(data, &playbook); err != nil {
+		log.Error(err)
+		return nil
+	}
+
+	for key, workflow := range playbook.Workflow {
+		workflow.ID = key
+		playbook.Workflow[key] = workflow
+	}
+
+	for key, target := range playbook.TargetDefinitions {
+		target.ID = key
+		playbook.TargetDefinitions[key] = target
+	}
+
+	for key, agent := range playbook.AgentDefinitions {
+		agent.ID = key
+		playbook.AgentDefinitions[key] = agent
+	}
+
+	for key, auth := range playbook.AuthenticationInfoDefinitions {
+		auth.ID = key
+		playbook.AuthenticationInfoDefinitions[key] = auth
+	}
+
+	return &playbook
+}
